<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_photo_dialog_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
...
            <TextView
                android:id="@+id/add_photo_textview"
                style="@style/TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_a_photo" />

            <ImageView
                android:id="@+id/photo_imageview"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="12dp"
...
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="8dp">

            <ImageView
                android:id="@+id/take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/white"
                android:contentDescription="@string/content_description"
                android:padding="4dp"
                app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

            <ImageView
                android:id="@+id/select_photo_from_gallery"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:background="@android:color/white"
                android:contentDescription="@string/content_description"
                android:padding="4dp"
...
                android:id="@+id/radio_button_facade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radio_button_lounge"
                app:layout_constraintEnd_toStartOf="@+id/radio_button_kitchen"
                android:text="@string/photo_type_facade" />

            <RadioButton
                android:id="@+id/radio_button_kitchen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_type_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/description"
                android:inputType="textMultiLine|textNoSuggestions"
                android:text="@string/enter_a_description" />
...
