...
    <string name="add_a_photo">Add a photo</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="change_property_type">CHANGE TYPE</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="no">NO</string>
    <string name="change_property_status">CHANGE STATUS</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="change_photo">Change photo</string>
    <string name="update_photo_detail">UPDATE PHOTO</string>
    <string name="delete_photo">DELETE PHOTO</string>
    <string name="confirm_save_changes_dialog_title">UPDATE PROPERTY</string>
    <string name="confirm_save_changes_dialog_message">You made changes.Would you like to save them?</string>
    <string name="confirm_save_changes">CONFIRM CHANGES</string>
...
